Added bootstrap and bootswatch theme. Added navigation component. Added state management.

--- a/src/app/views/app/app.component.html
+++ b/src/app/views/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<div class="container">
+  <app-navigation></app-navigation>
+  <div class="row">
+    <div class="col">
+      <div class="px-3">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+</div>
