--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,12 +1,23 @@
-<form [formGroup]="form" (ngSubmit)="login()" novalidate>
-  <label>
-    Username:
-    <input type="text" formControlName="username">
-  </label>
-  <label>
-    Password:
-    <input type="password" formControlName="password">
-  </label>
-  <button type="submit" [disabled]="!form.valid">Submit</button>
-  <span class="error" *ngIf="loginFailed">Invalid username or password.</span>
-</form>
+<div class="col-6 mx-auto pt-5">
+  <div class="card">
+    <h5 class="card-header">Claims Processing Demo</h5>
+    <div class="card-body">
+      <form [formGroup]="form" (ngSubmit)="login()" novalidate>
+        <div class="form-group">
+          <label>
+            Email Address
+            <input type="text" class="form-control" placeholder="your.name@example.org" formControlName="username">
+          </label>
+        </div>
+        <div class="form-group">
+          <label>
+            Password
+            <input type="password" class="form-control" placeholder="shhhh it's a secret" formControlName="password">
+          </label>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="!form.valid">Login</button>
+        <span class="error" *ngIf="loginFailed">Invalid username or password.</span>
+      </form>
+    </div>
+  </div>
+</div>
