Added logout link.

--- a/src/app/views/navigation/navigation.component.html
+++ b/src/app/views/navigation/navigation.component.html
@@ -6,12 +6,15 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsible">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <ul class="navbar-nav w-100 mr-auto mt-2 mt-lg-0">
           <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" routerLink="/">Dashboard</a>
           </li>
           <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" routerLink="/claims">Claims</a>
+          </li>
+          <li class="nav-item ml-lg-auto" routerLinkActive="active">
+            <a class="nav-link" routerLink="/logout">Logout</a>
           </li>
         </ul>
       </div>
