Added models to represent accounts, claims, receipts, and service providers. Added mock data for accounts, claims, receipts, and service providers. Added account service to retrieve mock accounts. Added date service for date operations. Updated login to redirect to dashboard if the user is already logged in.

--- a/src/app/views/navigation/navigation.component.html
+++ b/src/app/views/navigation/navigation.component.html
@@ -7,7 +7,7 @@
       </button>
       <div class="collapse navbar-collapse" id="collapsible">
         <ul class="navbar-nav w-100 mr-auto mt-2 mt-lg-0">
-          <li class="nav-item" routerLinkActive="active">
+          <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
             <a class="nav-link" routerLink="/">Dashboard</a>
           </li>
           <li class="nav-item" routerLinkActive="active">
